fixed error with production build failing to apply css styles -> issue with purge css in tailwind.config.js; redid border colouring on cards for better contrast

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,13 +1,23 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities; 
+
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
+
 html {
     scroll-behavior: smooth;
 }
 
 body {
-    @apply font-body;
+    @apply font-body w-full;
 }
 
 .wrapper {
-    @apply w-full;
+    @apply w-full h-full;
 }
 
 .icon {
